Fixed whats happening spacing and footer links

--- a/apps/site/assets/css/_footer.scss
+++ b/apps/site/assets/css/_footer.scss
@@ -47,6 +47,12 @@
 
   a {
     color: $brand-primary-light-contrast;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+      color: $brand-primary-light-contrast;
+    }
   }
 }
 
